# learn-opengl

./: meson.build  readme.md
glad/: meson.build
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: hello_triangle.frag  hello_triangle.vert  hello_triangle_alt.frag
src/: events.c  events.h  game.h  hello_triangle.c  hello_triangle_elements.c  hello_triangle_exercise_2.c  hello_triangle_exercise_3.c  hello_window.c  init.c  init.h  main.c  shaders.c  shaders.h  shaders_uniforms.c
